# dynamixel-ax12-library

./: .gitignore  CMakeLists.txt  Makefile  build.sh
docs/: skeleton_halfway.c
include/: dynamixel_motor.h  robotarm.h
src/: dynamixel_constants.h  dynamixel_motor.c  dynamixel_motor.h  dynamixel_protocol.c  dynamixel_protocol.h  dynamixel_translation.c  dynamixel_translation.h
tools/: emulator.c  hanoi_solver.c
tools/emulator/: CMakeLists.txt
tools/emulator/src/: emulator.c
tools/hanoi-solver/: CMakeLists.txt
tools/hanoi-solver/src/: hanoi-solver.c
